--- a/src/pages/BuyCars/components/CarSearchForm/CarSearchForm.css
+++ b/src/pages/BuyCars/components/CarSearchForm/CarSearchForm.css
@@ -21,17 +21,35 @@
 
 .serach-box h1{
   margin: 0 0 16px 0;
-  color: var(--deep);
+  color: var(--deep); 
   font-size: 30px;
   font-weight: 600;
 }
 
 .search_cars{
-  display: grid;
-  grid-template-columns: 1fr auto;
+  display: flex;
+
   gap: 14px;
   margin-bottom: 16px;
 
+}
+.search_cars .search_car_placeholder{
+  padding: 0;
+  margin: 0;
+  width: 550px;
+  border: 1px solid var(--deep);
+  border-radius: 5px;
+}
+.serach_cars p{
+  border: 1px solid var(--deep);
+}
+
+.search_cars .serach-icon{
+  position: relative;
+  left: 270px;
+  top: 5px;
+  font-size: 20px;
+  color: #6B7A90;
 }
 
 .search_cars input,
@@ -40,7 +58,7 @@
 .model_option select{
   height: 44px;
   padding: 0 14px ;
-  border: 1px solid var(--deep);
+  border: none;
   border-radius: 8px;
   background: #fff;
   outline: none;
@@ -57,30 +75,96 @@
   box-shadow: 0 0 0 3px rgba(55,124,219,.15);
 }
 
-#car_type{
-  background: var(--blue);
-  color: #fff;
-  border-color: var(--blue);
+ #make_box  {
+   appearance: none;      /* removes default arrow */
+  -webkit-appearance: none;
+  -moz-appearance: none;
+    width: 200px
+     
+}
+ #model_box  {
+   appearance: none;      /* removes default arrow */
+  -webkit-appearance: none;
+  width: 200px
+}
+
+.model_option p{
+  border: 1px solid var(--deep);
+  border-radius: 5px;
+ 
+}
+
+.calander_input::-webkit-calendar-picker-indicator {
+  display: none;
+  -webkit-appearance: none;
+}
+
+.calander_icon{
+  width: 80px;
+  color: var(--deep);
+}
+
+#car_type {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+
+  width: 160px;
+  padding: 10px 40px 10px 16px;
   font-size: 17px;
   font-weight: 500;
   text-transform: uppercase;
-  letter-spacing: .3px;
-  padding: 0 16px;
+  background: var(--blue);
+  color: #fff;
+  border: 1px solid var(--blue);
+  border-radius: 6px;
+  cursor: pointer;
+} 
+.dropdown-icon{
+  position: absolute;
+  left: 60vw;
+  margin-top: 12px;
+  color: white;
+
 }
+
+.model_option #box_dropdown{
+  color: var(--deep);
+}
+
+
 
 .model_option{
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 14px;
+  gap: 12px;
+  
+}
+.slider{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .single-slider{
+  width: 500px;
   margin-top: 0px;
-  padding: 14px 16px;
+  margin-bottom: 10px;
+  padding: 7px 16px;
   background: #f4f4f4;
   border-radius: 10px;
   border: 1px solid var(--border);
 }
+.advance_search{
+  margin: 20px 0px 0px 10px;
+  font-size: 20px;
+}
+.play_button{
+  color: var(--deep);
+  margin-top: 28px;
+  margin-left: 5px;
+}
+
 .budget{
   display: inline-block;
   margin-bottom: 8px;
@@ -90,8 +174,9 @@
 }
 #budget_heading{
   color: var(--muted);
-  padding: 0px;
-  margin: 16px 0px 0px 0px;
+  font-size: 22px;
+  padding: 0px 0px 10px 5px;
+  margin: 0px;
   
 }
 
@@ -136,13 +221,14 @@
   font-size: 30px;
   margin-bottom: 12px;
   padding-left:30px ;
+  padding-bottom: 10px;
 }
 
 .sell_car_icon > div{
   margin: 0px;
   display: grid !important;
   grid-template-columns: repeat(2, minmax(0,1fr));
-  gap: 18px 24px !important;
+  /* gap: 18px 24px !important; */
   text-align: center;
 }
 
@@ -151,6 +237,22 @@
   font-size: 12px;
   line-height: 1.3;
   color: var(--muted);
+}
+
+.sell_car_grid{
+  width: 300px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 0px;
+  text-align: center;
+  font-size: 12px;
+  column-gap: 0px !important;
+  row-gap: 20px;
+  align-self: center;
+  margin-left: 20px !important;
+}
+.sell_car_grid div{
+  padding-left: 0px;
 }
 
 .sell_btn{
@@ -178,3 +280,6 @@
 @media (max-width: 640px){
   .model_option{ grid-template-columns: 1fr; }
 }
+
+
+
