--- a/src/pages/BuyCars/components/HeroSection/HeroSection.css
+++ b/src/pages/BuyCars/components/HeroSection/HeroSection.css
@@ -6,7 +6,7 @@
     background-repeat: no-repeat;
 }
 .main-text{
-    width: 50%;
+    width: 40%;
     padding: 60px;
     text-align: left;
     color: #294872;
@@ -17,6 +17,7 @@
     font-size: 60px;
     font-weight: bold;
     line-height: 1em;
+    font-family: 'Abhaya Libre'
  
 }
 
