--- a/src/pages/BuyCars/components/MostPopularCar/Home.css
+++ b/src/pages/BuyCars/components/MostPopularCar/Home.css
@@ -7,7 +7,7 @@
 .home {
   width: 1200px;
   padding: 1.5rem; /* p-6 */
-  border: 1px solid rgba(55, 124, 219, 0.5);
+  border: 1px solid #294872;
   border-radius: 10px;
   
  
