--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -7,6 +7,7 @@
     background-color: #d8d8d8;
     line-height: 1rem;
     border: 1px solid #595959;
+    font-family: "Abhaya Libre";
 }
 
 .paragraph{
