--- a/src/pages/BuyCars/components/BrandLogo/PopularBrands.css
+++ b/src/pages/BuyCars/components/BrandLogo/PopularBrands.css
@@ -6,7 +6,7 @@
 }
 
 .brands-container {
-  border: 1px solid rgba(55, 124, 219, 0.5); 
+  border: 1px solid #294872; 
   border-radius: 6px;
   padding: 25px;
 
