--- a/src/pages/BuyCars/components/contactForm/ContactForm.css
+++ b/src/pages/BuyCars/components/contactForm/ContactForm.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  border: 1px solid #ddd;
+  border: 1px solid #294872;;
   border-radius: 8px;
   background: #fff;
   padding: 20px;
