--- a/src/pages/BuyCars/components/contactForm/ContactForm.css
+++ b/src/pages/BuyCars/components/contactForm/ContactForm.css
@@ -79,13 +79,14 @@
 
 .form-row {
   display: flex;
-  gap: 12px;
+  justify-content: space-between;
+  /* gap: 12px; */
   /* flex-wrap: wrap; */
 }
 
 .contact-form input,
 .contact-form textarea {
-  width: 100%;
+  
   padding: 10px ;
   border: 1px solid #ccc;
   border-radius: 6px;
