--- a/src/pages/HomePage/components/MostPopularCar/CarCard.css
+++ b/src/pages/HomePage/components/MostPopularCar/CarCard.css
@@ -1,25 +1,25 @@
-.car-card {
+.most_car-card{
   border: 1px solid #6B7A90; 
   border-radius: 0.5rem; 
    /* shadow-md */
   padding: 0.75rem; /* p-3 */
 }
 
-.car-card img {
+.most_car-card img {
   border-radius: 0.375rem; /* rounded-md */
   width: 100%;
   height: 10rem; /* h-40 */
   object-fit: cover;
 }
 
-.car-card h3 {
+.most_car-card h3 {
   font-size: 22px; /* text-lg */
   font-weight: 600; /* font-semibold */
   margin: 10px;
   margin-bottom: 0px;
 }
 
-.car-card p {
+.most_car-card p {
   font-size: 22px; /* text-sm */
   color: #4b5563; /* text-gray-600 */
   margin: 10px;
@@ -28,7 +28,7 @@
   
 }
 
-.car-card button {
+.most_car-card button {
   margin-top: 0.75rem;
   width: 100%;
   border: 3px solid #294872;
@@ -41,6 +41,6 @@
   text-transform: uppercase;
 }
 
-.car-card button:hover {
+.most_car-card button:hover {
   background-color: #e5e7eb; /* hover:bg-gray-200 */
 }
