--- a/src/pages/HomePage/components/Dealing/BestDealers.css
+++ b/src/pages/HomePage/components/Dealing/BestDealers.css
@@ -22,19 +22,16 @@
     
 }
 
-.Heading{
-    display: flex;
-    flex-direction: row;
-    color: #294872;
-    justify-content: center;
-    line-height: 1em;
-    width: 60vw;
-    font-size: 60px;
-    margin-top: 10px;
-    font-family: 'Abhaya Libre';
 
 
-
+.Heading {
+  color: #294872;
+  text-align: center;
+  line-height: 1em;
+  width: 60vw;
+  font-size: 60px;
+  margin-top: 10px;
+  font-family: 'Abhaya Libre', serif;
 }
 
 .car_details_button{
