--- a/src/pages/HomePage/components/ImportedCar/CarImportCard.css
+++ b/src/pages/HomePage/components/ImportedCar/CarImportCard.css
@@ -33,7 +33,7 @@
 .card-title {
   font-size: 1.5rem;
   color: #294872;
-  margin-bottom: 0px;
+  margin-bottom: 5px;
   margin-top: 20px !important; 
 
 }
@@ -41,7 +41,8 @@
 .card-text {
   font-size: 1rem;
   color: #294872;
-  margin-bottom: 12px;
+
+  margin: 2px;
   line-height: 1.5;
 }
 .car-card-box p{
@@ -51,6 +52,7 @@
 .card-list {
   list-style: none;
   padding: 0;
+  margin-top: 0px;
   margin-bottom: 20px;
 }
 
@@ -62,8 +64,9 @@
 }
 
 .card-list .dot_icon{
-
+  position: relative;
    font-size: 30px; 
+   top: 10px;
 }
 
 .card-btn {
@@ -76,6 +79,7 @@
   font-size: 17px !important;
   font-weight: bold;
   transition: background 0.3s ease;
+  margin-bottom: 10px;
 }
 
 .card-btn:hover {
@@ -85,11 +89,16 @@
 .car-card-image {
   flex: 1;
   min-width: 380px;
+  margin: 0;
+  padding: 0;
+  height: 400px; /* ensure container has height */
+  overflow: hidden; /* hides any overflow */
+  
 }
 
-.car-card-image img {
+.car-card-image .hassle_car {
   width: 100%;
-  height: auto;
+  height: 100%;
   object-fit: cover;
 }
 
