--- a/src/components/HeroSection/HeroSection.css
+++ b/src/components/HeroSection/HeroSection.css
@@ -1,15 +1,16 @@
 .Hero{
     width: 100%;
-    height: 90vh;
+    height: 650px;
     background-size: cover;
-    background-position: center center ;
+    background-position:  bottom center ;
     background-repeat: no-repeat;
 }
 .main-text{
-    width: 40%;
-    padding: 60px;
+    width: 60%;
+    padding: 80px;
     text-align: left;
     color: #294872;
+  
 }
 
 .headline{
