--- a/src/pages/CarListings/components/SearchCar.css
+++ b/src/pages/CarListings/components/SearchCar.css
@@ -1,6 +1,6 @@
 .search-container {
   max-width: 1000px;
-  margin: -40px auto;
+  margin: -40px auto 50px auto;
   padding: 20px;
   background: #fff;
   border-radius: 12px;
@@ -10,9 +10,11 @@
 .title {
   text-align: center;
   font-size: 30px;
-  font-weight: bold;
+  font-weight: 550;
   color: #294872;
   margin-bottom: 20px;
+  margin-top: 0px;
+  font-family: sans-serif;
 }
 
 /* Search Row */
@@ -27,7 +29,7 @@
   flex: 1;
 }
 
-.list-search-input, .date-input {
+.list-search-input {
    width: 98%;
     padding: 10px 0px 10px 12px;
     border: 1px solid #294872;
@@ -35,7 +37,14 @@
     font-size: 17px;
     color: #555;
 }
-
+.date-input {
+   width: 95%;
+    padding: 10px 0px 10px 12px;
+    border: 1px solid #294872;
+    border-radius: 6px;
+    font-size: 17px;
+    color: #555;
+}
 .input-group .icon {
   position: absolute;
   right: 12px;
@@ -48,7 +57,7 @@
   background: #377CDB;
   color: #fff;
   border: none;
-  padding: 10px 20px;
+  padding: 10px 210px 10px 10px;
   border-radius: 8px;
   font-size: 14px;
   font-weight: bold;
@@ -65,7 +74,7 @@
 .dropdown-row {
   display: flex;
   gap: 10px;
-  margin-bottom: 20px;
+  
 }
 
 .dropdown-row select {
@@ -81,7 +90,7 @@
 /* Budget section */
 .budget-section label {
   display: block;
-  font-weight: bold;
+  font-weight: 550;
   margin-bottom: 5px;
 }
 .budget-section label{
@@ -91,7 +100,7 @@
 .budget-values {
   display: flex;
   justify-content: space-between;
-  font-size: 0.85rem;
+  font-size: 17px;
   margin-bottom: 8px;
   color: #555;
 }
