--- a/src/pages/SellCars/components/HowItWorks.css
+++ b/src/pages/SellCars/components/HowItWorks.css
@@ -1,7 +1,8 @@
 .how-container {
   max-width: 1300px;
-  margin: 30px auto;
-  padding: 40px;
+  margin: 30px;
+  margin-bottom: 50px;
+  padding: 0px 40px;
   border: 1px solid #294872;
   border-radius: 8px;
   background: #fff;
@@ -32,6 +33,8 @@
 .step-icon {
   font-size: 40px;
   color: #294872;
+  height: 40px !important;
+  width: 40px;
   /* margin-bottom: 10px; */
 }
 
@@ -40,8 +43,7 @@
   font-size: 22px;
   font-weight: bold;
   color: #294872;
-  margin-bottom: 8px;
-  margin-top: 8px;
+  margin: 0px;
 }
 
 .step-box p {
