--- a/src/pages/SellCars/components/sell_your_car_form.css
+++ b/src/pages/SellCars/components/sell_your_car_form.css
@@ -1,19 +1,24 @@
+:root{
+  --muted: #6B7A90
+}
 .form-container {
   background: #fff;
-  padding: 20px;
+  padding: 10px 30px 30px 30px;
   border-radius: 10px;
   box-shadow: 0 3px 8px rgba(0, 0, 0, 0.15);
   max-width: 1100px;
   margin: -40px auto;
   text-align: center;
-  margin-bottom: 70px;
+  margin-bottom: 50px;
 }
 
 .form-container h2 {
 
   color:#294872;
   font-size: 30px;
-  margin-top: 0px;
+  margin-top: 0px ;
+  margin-bottom: 15px;
+
 }
 
 .car-form {
@@ -24,7 +29,7 @@
 
 .form-row {
   display: flex;
-  gap: 15px;
+  gap: 20px;
 }
 
 .custom-select {
@@ -41,6 +46,9 @@
   appearance: none; /* hide default arrow */
   background: #fff;
   cursor: pointer;
+  
+  color: var(--muted);
+  
 }
 
 .sellcar_dropdown-icon {
