--- a/src/pages/CarDetails/components/essential_details.css
+++ b/src/pages/CarDetails/components/essential_details.css
@@ -9,7 +9,7 @@
 
 .buycar-details-main-image {
   text-align: center;
-  margin-bottom: 20px;
+ 
 }
 
 .buycar-details-main-image img {
@@ -22,8 +22,10 @@
   text-align: center;
   font-size: 24px;
   line-height: 1.6;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
   color: #444;
+  margin-top: 0px;
+
 }
 
 .buycar-details-card {
