--- a/src/pages/CarListings/components/CarList.css
+++ b/src/pages/CarListings/components/CarList.css
@@ -9,7 +9,7 @@
 
 .carlist-title {
   font-size: 30px;
-  font-weight: bold;
+  font-weight: 550;
   margin-bottom: 16px;
   color: #294872;
 }
@@ -60,7 +60,7 @@
 .carlist-notify-btn {
   width: 100%;
   padding: 10px;
-  border: 1px solid #294872;
+  border: 2px solid #294872;
   background: #fff;
   color: #294872;
   font-weight: 600;
